--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     padding-top: 800px;
+    text-align: center;
 
 }
 
@@ -76,7 +77,7 @@ p {
 }
 .menu{
     list-style: none;
-    position: absolute;
+    position: fixed;
     top: 10px;
     right: 30px;
     z-index: 11;
@@ -95,4 +96,15 @@ p {
 }
 .links:hover{
     background-color:#191259;
+}
+html{
+    scroll-behavior: smooth;
+}
+a{
+    text-decoration: none;
+    
+}
+.article:hover{
+    color:crimson;
+    
 }
